Added code for workshops inside of Upcoming Classes

--- a/client/less/pages/home.less
+++ b/client/less/pages/home.less
@@ -14,7 +14,9 @@
             padding-left: .3em;
             .class-name {
                 font-family: @title-font;
-
+            }
+            .label {
+                margin-right: 10px;
             }
             time {
                 display: block;
