--- a/client/less/bootstrap/scaffolding.less
+++ b/client/less/bootstrap/scaffolding.less
@@ -45,19 +45,8 @@ textarea {
 
 // Links
 
-a {
-  color: @link-color;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    color: @link-hover-color;
-    text-decoration: underline;
-  }
-
-  &:focus {
+a:focus {
     .tab-focus();
-  }
 }
 
 
