--- a/client/less/main.less
+++ b/client/less/main.less
@@ -6,11 +6,10 @@ body {
     }
 }
 a{
-    &:link{
+    transition: color .25s ease-in-out;
+    text-decoration:none;
+    &:link, &:visited{
         color: @cornerDark;
-    }
-    &:visited{
-        color: @cornerFaded;
     }
     &:hover {
         color: @primaryLight;
