--- a/client/public/styles/ananda.css
+++ b/client/public/styles/ananda.css
@@ -5420,6 +5420,9 @@ main .affix-bottom {
 .note-editable {
   background-color: white;
 }
+img.image {
+  width: 40%;
+}
 .post .post-head {
   margin-left: -15px;
   margin-right: -15px;
