--- a/client/views/home.html
+++ b/client/views/home.html
@@ -18,7 +18,7 @@
 {% block main %}
 <div class="row">
 
-    <div id="left" class="col-xs-12 col-sm-4">
+    <div id="left">
         <div id="next" class="next card">
             <h2>
                 <i class="fa fa-calendar"></i>Upcoming Classes</h2>
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <div id="right" class="col-xs-12 col-sm-8">
+    <div id="right">
         <div id="welcome" class="clearfix card">
             <h2>{{page.heading}}</h2>
             {%if page.image%}
