Added styling for post

--- a/client/less/ananda.less
+++ b/client/less/ananda.less
@@ -12,5 +12,6 @@
 @import "pages/schedule.less";
 @import "pages/items.less";
 @import "pages/admin.less";
+@import "pages/post.less";
 
 @import "footer.less";
