--- a/client/views/home.html
+++ b/client/views/home.html
@@ -77,7 +77,7 @@
                             <a href="/news/{{post.slug}}">{{post.title}}</a>
                         </h1>
                         <time>Published {{post.published | prettyDate}}</time>
-                        <div class="post-body">{{post.body | safe}}</div>
+                        <div class="post-body">{{post.body | excerpt(40) | safe}}&hellip;</div>
                         <a href="/news/{{post.slug}}">Read More..</a>
                     </div>
                 </article>
