Removed dead links on home page

--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -72,17 +72,17 @@
                     <li>
                         <a href="/workshops">Workshops</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="/pricing">Membership &amp; Pricing</a>
-                    </li>
+                    </li> -->
                     {%endif%}
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-
+                <!-- <ul class="nav navbar-nav navbar-right">
+                
                     <li>
                         <a href="/store">Store</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
             <!-- /.navbar-collapse -->
         </div>
