--- a/client/views/schedule.html
+++ b/client/views/schedule.html
@@ -4,14 +4,13 @@
 {%block main%}
 <div class="row">
 
-    <div class="col-xs-12 col-md-9 col-md-offset-2">
-        <h2>Schedule</h2>
+    <div class="col-xs-12">
         <table class="table table-responsive class-schedule">
+            <tr><th colspan="3"><h2>Schedule</h2></th></tr>
             <tr>
                 <th>Time</th>
                 <th>Class</th>
                 <th>Instructor</th>
-                <!-- <th>Notes</th> -->
             </tr>
             {% for day in days %} {%if not (loop.index0 == 0 and classes[day].length == 0)%}{#get rid of first empty day#}
             <tr>
@@ -21,12 +20,11 @@
             <tr>
                 <td class="class-time">{{class.StartDateTime | prettyTime}}</td>
                 <td>
-                    <a href="/classes#{{class.ClassDescription.Name | slugify}}">{{class.ClassDescription.Name}}</a>
+                    <a href="/{{'workshops' if class.isWorkshop else 'classes'}}#{{class.ClassDescription.Name | slugify}}">{{class.ClassDescription.Name}}</a> {% if class.isWorkshop %}<span class="label label-default"> Workshop</span>{%endif%}
                 </td>
                 <td>
                     <a href="/instructors#{{class.Staff.Name | slugify}}">{{class.Staff.Name}}</a>
                 </td>
-                <!-- <td>Not yet implemented</td> -->
             </tr>
             {% endfor %} {%endif%} {% endfor %}
         </table>
