--- a/client/views/classes.html
+++ b/client/views/classes.html
@@ -8,7 +8,7 @@
         <ul id='affix' class="card no-border nav nav-pills nav-stacked">
             {%for class in classes | attrSort('Name')%}
             <li>
-                <a href="#{{class.Name | escape | replace(' ', '-')}}">{{class.Name}}</a>
+                <a href="#{{class.Name | slugify}}">{{class.Name}}</a>
             </li>
             {%endfor%}
         </ul>
@@ -16,7 +16,7 @@
     <div class="col-xs-12 col-sm-8 col-md-9">
         <div class="row">
             {%for class in classes | attrSort('Name')%}
-            <div id="{{class.Name | escape | replace(' ', '-') }}" class="card class">
+            <div id="{{class.Name | slugify}}" class="card class">
                 <h1>{{class.Name}}
                 </h1>
                 {%if class.ImageURL %}
