--- a/client/views/instructors.html
+++ b/client/views/instructors.html
@@ -4,7 +4,7 @@
 <!---->
 {% for staff in staff%}
 <div class="row">
-    <div id="{{staff.Name | replace(' ', '-')}}" class="card clearfix col-sm-8 col-sm-offset-2">
+    <div id="{{staff.Name | slugify}}" class="card clearfix col-sm-8 col-sm-offset-2">
         <a href="mailto:{{staff.Email}}">
             <h1>{{staff.Name}}</h1>
         </a>
