--- a/client/views/list-enum.html
+++ b/client/views/list-enum.html
@@ -8,7 +8,7 @@
         <ul id='affix' class="card no-border nav nav-pills nav-stacked">
             {%for item in objectList | attrSort('Name')%}
             <li>
-                <a href="#{{item.Name | escape | replace(' ', '-')}}">{{item.Name}}</a>
+                <a href="#{{item.Name | slugify}}">{{item.Name}}</a>
             </li>
             {%endfor%}
         </ul>
@@ -16,7 +16,7 @@
     <div class="col-xs-12 col-sm-8 col-md-9">
         <div class="row">
             {%for item in objectList | attrSort('Name')%}
-            <div id="{{item.Name | escape | replace(' ', '-') }}" class="card item clearfix">
+            <div id="{{item.Name | slugify}}" class="card item clearfix">
                 {%if item.Image %}
                 <img src="{{item.Image}}" class="pull-right img-circle" alt="{{item.Name}} Image">{%endif%}
                 <h1>{%if item.Email %}
