--- a/client/views/home.html
+++ b/client/views/home.html
@@ -47,14 +47,13 @@
         <div id="contact" class="clearfix card">
             <h2>
                 <i class="fa fa-map-marker"></i>Visit Us</h2>
-            <img class="pull-right img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyCOyv-a1uHs4R15mdf87cdA-j8zU3GN7Qk&center=Lander,WY&zoom=16&size=100x100&sensor=false" alt="">
+            <a href="https://www.google.com/maps/preview?q=378+Main+St+Lander+Wy" title="View on Google Maps"><img class="img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyCOyv-a1uHs4R15mdf87cdA-j8zU3GN7Qk&markers=color:green|378+Main+St+Lander,WY&zoom=16&size=400x200&sensor=false" alt="">
+
             <span>Ananda Yoga Lander</span>
             <br>
-            <span>c/o Sylvia Carl</span>
+            <span>378 Main St.</span>
             <br>
-            <span>252 N 9th St.</span>
-            <br>
-            <span>Lander, Wy 82520</span>
+            <span>Lander, Wy 82520</span></a>
         </div>
     </div>
 
