--- a/client/public/styles/ananda.css
+++ b/client/public/styles/ananda.css
@@ -5466,6 +5466,9 @@ main .affix-bottom {
 img.image {
   width: 40%;
 }
+a.btn.btn-primary {
+  color: #fff;
+}
 .post .post-head {
   margin-left: -15px;
   margin-right: -15px;
