Hiding welcome card on xs screens

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -58,7 +58,7 @@
     </div>
 
     <div id="right">
-        <div id="welcome" class="clearfix card">
+        <div id="welcome" class="clearfix card hidden-xs">
             <h2>{{page.heading}}</h2>
             {%if page.image%}
             <img class="pull-right thumbnail" src="{{page.image}}" alt="welcome image">{%endif%} {{page.body | safe}}
