--- a/client/views/home.html
+++ b/client/views/home.html
@@ -68,10 +68,10 @@
             {%if page.image%}
             <img class="pull-right thumbnail" src="{{page.image}}" alt="welcome image">{%endif%} {{page.body | safe}}
         </div>
-        <section id="news" class="row">
-            <h2 class="visible-xs col-xs-12 text-center">Studio News &amp; Blog</h2>
+        <section id="news">
+            <h2 class="visible-xs text-center">Studio News &amp; Blog</h2>
             {%for post in posts %}
-            <div class="article-wrapper col-xs-12 col-lg-6">
+            <div class="article-wrapper">
                 <article class="card">
                     {% if post.headerImg %}
                         <img src="{{post.headerImg}}" alt="Header image for {{post.title}}">
