Switched articles to have a min height on home page

--- a/client/less/pages/home.less
+++ b/client/less/pages/home.less
@@ -58,7 +58,7 @@
                 padding-right:0;
             }
             article{
-                height: 250px;
+                min-height: 250px;
                 overflow: hidden;
                 padding-left: 1em;
                 position: relative;
